bee-common-derive/tests/packable/no_id_enum.stderr
error: All variants of an enum that derives `Packable` require a `#[packable(id = ...)]` attribute.
  --> $DIR/no_id_enum.rs:11:5
   |
11 |     None,
   |     ^^^^
